--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.12",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~12.2.12",
     "@angular/compiler": "~12.2.12",
     "@angular/core": "~12.2.12",
     "@angular/forms": "~12.2.12",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~12.2.12",
     "@angular/platform-browser-dynamic": "~12.2.12",
     "@angular/router": "~12.2.12",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
     "rxjs": "~7.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.11.4"
@@ -33,6 +37,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "font-awesome": "^4.7.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
