--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
+    "ngx-daterangepicker-material": "^2.4.2",
     "rxjs": "~7.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.11.4"
