--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~12.2.12",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-auto-dismiss-alert": "^1.0.2",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "ngx-daterangepicker-material": "^2.4.2",
